Update docker-compose.yml with proper volume mounts
- Separate /movies and /tv paths (matching Jellyfin convention)
- Added /temp_storage mount for fast conversion storage
- Removed unused MEDIA_PATH and CONFIG_PATH env vars
- Added helpful comments for each mount

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,16 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      # Mount your media directories
-      - /path/to/your/media:/media
+      # Mount your media directories - paths should match Jellyfin if using integration
+      - /path/to/your/movies:/movies
+      - /path/to/your/tv:/tv
       # Persistent configuration
       - dovi-convert-config:/config
+      # Optional: Fast temp storage for conversions (SSD recommended)
+      # Mount this, then enable "Use Temp Storage" in Settings
+      - /path/to/fast/storage:/temp_storage
     environment:
       - TZ=America/New_York
-      - MEDIA_PATH=/media
-      - CONFIG_PATH=/config
     restart: unless-stopped
 
 volumes:
